[BUGFIX] Fix "read-more" class for toggle paragraph visibility
Resolves #20

--- a/Resources/Public/Source/StyleSheets/Site/rte.css
+++ b/Resources/Public/Source/StyleSheets/Site/rte.css
@@ -139,6 +139,9 @@ span.code {
 	border: 1px #ccd solid;
 }
 
+span.read-more {
+}
+
 /* Color span in blue only in RTE */
 body.htmlarea-content-body span.read-more {
 	color: blue;
